--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
-  "plugin": "obsidian-gcal",
+  "id": "obsidian-gcal",
   "name": "Obsidian GCal",
+  "version": "1.0.0",
   "author": "ted-burns",
-  "minAppVersion": "0.12.15",
+  "minAppVersion": "0.12.1",
   "description": "Google calendar integration",
-  "isDesktopOnly": true
+  "isDesktopOnly": false
 }
